kubernetes/infra/kube-system/cilium/app/daemonset-patch.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: cilium
  namespace: kube-system
spec:
  template:
    spec:
      containers:
      - name: cilium-agent
        args:
        - --cni-exclusive=false
