kubernetes/infra/kube-system/cilium/app/ingress.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/networking.k8s.io/ingress_v1.json
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app hubble-ui-tailscale
  namespace: kube-system
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
  annotations:
    tailscale.com/hostname: hubble
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: hubble-ui
      port:
        number: 80
